# omp-logger

./: .gitmodules  CMakeLists.txt  README.md  omp-logger.inc
.github/workflows/: build.yml
docker/: Dockerfile  build.sh
include/: omp-logger.hpp
src/: CMakeLists.txt  common.hpp  component.cpp  component.hpp  debug-manager.cpp  debug-manager.hpp  logger-config.hpp  logs-result.cpp  logs-result.hpp  main.cpp  natives.cpp  natives.hpp  omp-log.cpp  omp-log.hpp  singleton.hpp  threaded-queue.cpp  threaded-queue.hpp
src/helpers/: format.cpp  format.hpp  utils.cpp  utils.hpp
